--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@emotion/styled": "^11.10.0",
     "@hookform/resolvers": "^2.9.7",
     "apexcharts": "^3.35.5",
+    "axios": "^0.27.2",
+    "date-fns": "^2.29.2",
     "framer-motion": "^7.2.1",
     "next": "12.2.5",
     "react": "18.2.0",
@@ -22,13 +24,17 @@
     "react-dom": "18.2.0",
     "react-hook-form": "7.32.0",
     "react-icons": "^4.4.0",
+    "react-query": "^3.39.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.5.0",
+    "@types/faker": "^6.6.9",
     "@types/node": "^18.7.13",
     "@types/react": "^18.0.17",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
+    "miragejs": "^0.1.45",
     "typescript": "^4.8.2"
   }
 }
